--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
-    <link rel="icon" href="Images/u.png">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="images/u.png">
+    <link rel="stylesheet" href="css/main.css">
     <title>Hello, world!</title>
   </head>
   <body>
     <div class="container">
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html"><img class="navbar-brand" src="Images/logo1.png" alt=""></a>
+        <a class="navbar-brand" href="index.html"><img class="navbar-brand" src="images/logo1.png" alt=""></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -48,7 +48,7 @@
         </div>
       <div class="col-lg-6 col-md-6">
         <div class="right">
-          <img class="header-img" src="Images/Photo-removebg-preview (1).png" alt="">
+          <img class="header-img" src="images/Photo-removebg-preview (1).png" alt="">
       </div>
       <div class="shape"></div>
         </div> 
