--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="left-col">
           <h1> <span>✋</span>I'm <span class="auto-input" ></span></h1>
         <p>Waxaan diyaar u ahay in aan kaa caawiyo sidaad u noqon laheed Full-stack Web developer weliba muddo kooban.</p>
-        <button type="button" class="btn btn-primary">ila soo xiriir 😃</button>
+       <a href="tel:0616604593"> <button type="button" class="btn btn-primary">ila soo xiriir 😃</button></a>
       </div>
         </div>
       <div class="col-lg-6 col-md-6">
