--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
       <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
-      <link rel="icon" href="../../images/u.png">
+      <link rel="icon" href="../images/u.png">
       <link rel="stylesheet" href="../css/main.css">
       <title>My Personal Website! Kusoo dhowow Website-keyga.</title>
     </head>
@@ -30,7 +30,7 @@
                 <a class="nav-link active" aria-current="page" href="index.html">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../contact.html">Contact</a>
+                <a class="nav-link active" aria-current="page" href="contact.html">Contact</a>
               </li>
             </ul>
             <form class="d-flex">
